src/components/ImageList.css
body {
  background-color: #f5f5f7;
  font-family: "Roboto", "sans-serif";
}

hr {
  opacity: 0.3;
}

.image-list-container {
  display: grid;
  justify-content: center;
  grid-gap: 0em 1.5em;
  grid-template-columns: repeat(3, auto);
  padding-bottom: 2em;
}

.image-list-container img {
  width: 100%;
  object-fit: cover;
}

.image-card-container {
  background-color: #ffffff;
  margin-top: 2em;
}

.details-card-container {
  margin-left: 1em;
  margin-right: 1em;
}

.details-card-container h3 {
  margin: 0.5em 0 0 0;
  font-weight: 500;
  font-size: 1rem;
}

.details-card-container h5 {
  margin: 0.5em 0 1em 0;
  font-weight: 400;
}

.details {
  margin-left: 2em;
}

.profile-details-container {
  display: grid;
  grid-template-columns: 50px 1fr;
  padding-bottom: 0.5em;
}

.profile-entry p {
  font-weight: 500;
  font-size: 0.8rem;
}

.profile-entry p:nth-child(1) {
  margin-bottom: 0.5em;
}
.profile-entry p:nth-child(2) {
  margin: 0;
}

.profile-entry p:nth-child(3) {
  margin-top: 0.5em;
}

.profile-details p {
  font-weight: 300;
  font-size: 0.8rem;
}

.profile-details p:nth-child(1) {
  margin-bottom: 0.5em;
}
.profile-details p:nth-child(2) {
  margin: 0;
}

.profile-details p:nth-child(3) {
  margin-top: 0.5em;
}

@media (min-width: 768px) and (max-width: 1024px) {
  .image-list-container {
    grid-gap: 2em;
    grid-template-columns: repeat(2, auto);
  }
}

@media (min-width: 375px) and (max-width: 767px) {
  .image-list-container {
    grid-template-columns: auto;
  }
}

